--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Lighthouse
-        uses: tuktukvlad/lighthouse-ci-action@1.1
+        uses: tuktukvlad/lighthouse-ci-action@f93544692539bb48fc3a2439634349e1bf005188
         with:
           app_id: ${{ secrets.SHOP_APP_ID }}
           app_password: ${{ secrets.SHOP_APP_PASSWORD }}
